objects/SBQQ__QuoteLine__c/fields/Additional_Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount_Amt__c</fullName>
    <formula>SBQQ__Discount__c  *  SBQQ__ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Discount (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>