objects/SBQQ__QuoteLine__c/fields/Base_Price_Percent__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Percent__c</fullName>
    <label>Base Price Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>