objects/SBQQ__QuoteLine__c/fields/Channel_Discount_Amt__c.field-meta.xml
<CustomField>
    <fullName>Channel_Discount_Amt__c</fullName>
    <formula>SBQQ__ListPrice__c  *  Channel_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Discount (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>