objects/SBQQ__QuoteLine__c/fields/ContractedPrice__c.field-meta.xml
<CustomField>
    <fullName>ContractedPrice__c</fullName>
    <formula>SBQQ__SpecialPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractedPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>