objects/SBQQ__QuoteLine__c/fields/Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price__c</fullName>
    <formula>SBQQ__ListPrice__c - (  Channel_Discount_Amt__c +  Volume_Discount_Amt__c +  (SBQQ__Discount__c * SBQQ__ListPrice__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>