objects/SBQQ__QuoteLine__c/fields/Customer_Price_Pct__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_Pct__c</fullName>
    <formula>( Product_Invoice_Price__c / SBQQ__ListPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Price (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>