objects/SBQQ__QuoteLine__c/fields/Discount_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Discount_Indicator__c</fullName>
    <formula>IF( DiscountLevel__c = 0, (IMAGE(&apos;https://imgur.com/byT4CEi.png&apos;,&quot;&quot;,30,150)),
IF( DiscountLevel__c = 1, (IMAGE(&apos;https://imgur.com/byT4CEi.png&apos;,&quot;&quot;,30,150)),
IF( DiscountLevel__c = 2, (IMAGE(&apos;https://imgur.com/SsyZQbJ.png&apos;,&quot;&quot;,30,150)),
IF( DiscountLevel__c = 3, (IMAGE(&apos;https://imgur.com/PB5uR1F.png&apos;,&quot;&quot;,30,150)), &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Indicator</label>
    <type>Text</type>
</CustomField>