objects/SBQQ__QuoteLine__c/fields/Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level__c</fullName>
    <formula>IF (SBQQ__Discount__c &gt;= 0.51,3,
IF (SBQQ__Discount__c &gt;= 0.26,2,
IF (SBQQ__Discount__c &gt;= 0.11,1,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>