objects/SBQQ__QuoteLine__c/fields/DiscountLevel__c.field-meta.xml
<CustomField>
    <fullName>DiscountLevel__c</fullName>
    <label>DiscountLevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>