objects/SBQQ__QuoteLine__c/fields/Family_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Family_Adjustment__c</fullName>
    <label>Family Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>