objects/SBQQ__QuoteLine__c/fields/Family_Adjustment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Family_Adjustment_Percent__c</fullName>
    <label>Family Adjustment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>