objects/SBQQ__QuoteLine__c/fields/Fixed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Cost__c</fullName>
    <formula>SBQQ__ListPrice__c  *  Fixed_Cost_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>