objects/SBQQ__QuoteLine__c/fields/Fixed_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Cost_Percent__c</fullName>
    <label>Fixed Cost Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>