objects/SBQQ__QuoteLine__c/fields/Freight_Charge__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge__c</fullName>
    <formula>SBQQ__ListPrice__c *  Freight_Charge_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>