objects/SBQQ__QuoteLine__c/fields/Freight_Charge_Percent__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Freight Charge Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>