objects/SBQQ__QuoteLine__c/fields/Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost__c</fullName>
    <formula>SBQQ__ListPrice__c  *  Freight_Cost_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>