objects/SBQQ__QuoteLine__c/fields/Freight_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_Type__c</fullName>
    <label>Freight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>