objects/SBQQ__QuoteLine__c/fields/GLobal_List_Price__c.field-meta.xml
<CustomField>
    <fullName>GLobal_List_Price__c</fullName>
    <formula>Base_Price__c + Family_Adjustment__c + Product_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GLobal List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>