objects/SBQQ__QuoteLine__c/fields/GLobal_List_Price_Percent__c.field-meta.xml
<CustomField>
    <fullName>GLobal_List_Price_Percent__c</fullName>
    <label>GLobal List Price Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>