objects/SBQQ__QuoteLine__c/fields/Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price__c</fullName>
    <formula>Product_Invoice_Price__c  +  Freight_Charge__c  +  Service_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>