objects/SBQQ__QuoteLine__c/fields/Invoice_Price_Pct__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Price_Pct__c</fullName>
    <formula>(Invoice_Price__c / SBQQ__ListPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Price (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>