objects/SBQQ__QuoteLine__c/fields/Net_Pocket_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Pocket_Price__c</fullName>
    <formula>Pocket_Price__c  *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Pocket Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>