objects/SBQQ__QuoteLine__c/fields/Net_Price_Pct__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_Pct__c</fullName>
    <formula>(Net_Price__c  / SBQQ__ListPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Price (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>