objects/SBQQ__QuoteLine__c/fields/Net_Sellable_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Sellable_Price__c</fullName>
    <formula>Invoice_Price__c - (  Distributor_Rebate__c  +  Volume_Rebate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sellable Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>