objects/SBQQ__QuoteLine__c/fields/New_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Net_Price__c</fullName>
    <label>New Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>