objects/SBQQ__QuoteLine__c/fields/Pocket_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Pocket_Margin_Pct__c</fullName>
    <formula>(Pocket_Margin__c  / SBQQ__ListPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pocket Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>