objects/SBQQ__QuoteLine__c/fields/PowerScore__c.field-meta.xml
<CustomField>
    <fullName>PowerScore__c</fullName>
    <label>PowerScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>