objects/SBQQ__QuoteLine__c/fields/PrimaryNegotiator__c.field-meta.xml
<CustomField>
    <fullName>PrimaryNegotiator__c</fullName>
    <label>PrimaryNegotiator</label>
    <length>18</length>
    <type>Text</type>
</CustomField>