objects/SBQQ__QuoteLine__c/fields/Product_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost_Percent__c</fullName>
    <label>Product Cost Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>