objects/SBQQ__QuoteLine__c/fields/Product_Density__c.field-meta.xml
<CustomField>
    <fullName>Product_Density__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Density_Family__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Density</label>
    <type>Text</type>
</CustomField>