objects/SBQQ__QuoteLine__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Family</label>
    <referenceTo>Product_Family__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>