objects/SBQQ__QuoteLine__c/fields/Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price__c</fullName>
    <formula>SBQQ__ListPrice__c  -   (  (  SBQQ__Discount__c  *  SBQQ__ListPrice__c  )  + (  Channel_Discount__c  *  SBQQ__ListPrice__c )  +  (  Volume_Discount__c *  SBQQ__ListPrice__c  )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>