objects/SBQQ__QuoteLine__c/fields/Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge__c</fullName>
    <formula>Selling_Price__c *  Service_Charge_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>