objects/SBQQ__QuoteLine__c/fields/Service_Charge_Percent__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Percent__c</fullName>
    <label>Service Charge Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>