objects/SBQQ__QuoteLine__c/fields/Service_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Service_Cost_Percent__c</fullName>
    <label>Service Cost Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>