objects/SBQQ__QuoteLine__c/fields/sfdcRecomendDiscount__c.field-meta.xml
<CustomField>
    <fullName>sfdcRecomendDiscount__c</fullName>
    <inlineHelpText>This discount is calculated by Pricing analytics tempate</inlineHelpText>
    <label>sfdcRecomendDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>