objects/SBQQ__QuoteLine__c/fields/Standard_Cost_Percent__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cost_Percent__c</fullName>
    <label>Standard Cost Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>