objects/SBQQ__QuoteLine__c/fields/Total_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Price__c</fullName>
    <formula>Invoice_Price__c  *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>