objects/SBQQ__QuoteLine__c/fields/Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount__c</fullName>
    <formula>(SBQQ__VolumeDiscount__c /  SBQQ__ListPrice__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume Discount%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>