objects/SBQQ__QuoteLine__c/fields/Volume_Rebate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Volume_Rebate_Percent__c</fullName>
    <label>Volume Rebate Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>